完善推送消息推送接口

--- a/WeChatToken/appsettings.json
+++ b/WeChatToken/appsettings.json
@@ -5,7 +5,11 @@
     }
   },
   "AllowedHosts": "*",
-  "appid": "wxeba345f80b78beb7",
-  "secret": "c7c726ba7345727e683de5c8f43efc66",
-  "securityKey": "Abcde1684613Vasdduhkasd"
+  "appid": "wx3731307d4a3b4ac9",
+  "secret": "ac058e53102afe48a60760f2c8f1ccba",
+  "securityKey": "Abcde1684613Vasdduhkasd",
+  "template": {
+    "pay": "fCiGc7WFTF_oA1JAKSBs3_cIUv-4e1yuAn-9k5wjNJY", //Ä£°åID
+    "notice": "fCiGc7WFTF_oA1JAKSBs3_cIUv-4e1yuAn-9k5wjNJY" //Í¨Öª
+  }
 }
