增加短信发送接口

--- a/WeChatToken/appsettings.json
+++ b/WeChatToken/appsettings.json
@@ -11,5 +11,12 @@
   "template": {
     "pay": "TxiKy47V9t4ynRWip9Uh4X57rWyNLMtmpj5m7RUARNk", //模板ID
     "notice": "fCiGc7WFTF_oA1JAKSBs3_cIUv-4e1yuAn-9k5wjNJY" //通知
+  },
+  "rongLianYunTongXun": {
+    "accountSid": "8a48b5515427d27601543255e5fe0ef4",
+    "accountAuthToken": "aa818d9b79794ed1b664cfa678c9756e",
+    "applicationID": "aaf98f8954383ba201544b7f0e550e7b", //所有的模板将要建立在一个应用下
+    "baseUrl": "https://app.cloopen.com:8883",
+    "msgParamUrl": "/2013-12-26/Accounts/{0}/SMS/TemplateSMS?sig={1}"
   }
 }
