--- a/WeChatToken/WeChatToken.csproj
+++ b/WeChatToken/WeChatToken.csproj
@@ -16,4 +16,6 @@
     <ProjectReference Include="..\WeChatPlatform\WeChatPlatform.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
