修改为正式的模板配置文件。

--- a/WeChatToken/appsettings.json
+++ b/WeChatToken/appsettings.json
@@ -5,11 +5,11 @@
     }
   },
   "AllowedHosts": "*",
-  "appid": "wx3731307d4a3b4ac9",
-  "secret": "ac058e53102afe48a60760f2c8f1ccba",
+  "appid": "wx38f503a0a18bb99b",
+  "secret": "302af50b11d70522225726eadd871590",
   "securityKey": "Abcde1684613Vasdduhkasd",
   "template": {
-    "pay": "TxiKy47V9t4ynRWip9Uh4X57rWyNLMtmpj5m7RUARNk", //模板ID
+    "pay": "8pRR6-Cn-CfMdjZLFPwthUXpc7cTztp9ZQgJBiNZ0cs", //模板ID
     "notice": "fCiGc7WFTF_oA1JAKSBs3_cIUv-4e1yuAn-9k5wjNJY" //通知
   },
   "rongLianYunTongXun": {
