增加短信及微信推送的拦截请求。

--- a/WeChatToken/WeChatToken.csproj
+++ b/WeChatToken/WeChatToken.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\HouseManage\Git\House\HouseManage\Data.MSSQL\Data.MSSQL.csproj" />
     <ProjectReference Include="..\TokenHelper\TokenHelper.csproj" />
     <ProjectReference Include="..\WeChatPlatform\WeChatPlatform.csproj" />
   </ItemGroup>
